catena/src/scene/snapshots/catena__scene__golden_tests__t2_crossing_braille.snap
---
source: catena/src/scene/golden_tests.rs
expression: "render(&scene, (30, 9), blitter)"
---
          [root]
            ⢸
            ⠘⡄
             ⡇
 [ada]⠤⠤⠤⠤⠤⠤⠤⡧⠤⠤⠤⠤⠤⠤[lovelace]
             ⡇
            ×4
             ⢸
           [leaf]
