catena/src/scene/snapshots/catena__scene__golden_tests__t2_node_forms_level_0.snap
---
source: catena/src/scene/golden_tests.rs
expression: "render_forms(&scene, (44, 10), Blitter::Braille, &forms)"
---
A⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤●
⢸                       ⡎
⢸                      ⢠⠃
⢸                      ⡸
⢸                      ⡇
⢸             ⢀⣀⣀⣀⣀⣀⠤⠤A
•⠤⠤⠔⠒⠒⠒⠒⠒⠉⠉⠉⠉⠉⠁
