catena/src/scene/snapshots/catena__scene__golden_tests__t2_node_forms_level_2.snap
---
source: catena/src/scene/golden_tests.rs
expression: "render_forms(&scene, (44, 10), Blitter::Braille, &forms)"
---
[Ada Lovelace]⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤*●[Charles B…]
      ⢸                       ⡇
      ⢸                      ⢸
      ⢸                      ⡇
      ⢸                     ⢸
      ⢸               ┌*─────────┐
*[日本語テキ…]⠤⠤⠤⠤⠤⠤⠤⠤│Analytical│
                      │  Engine  │
                      └──────────┘
