catena/src/scene/snapshots/catena__scene__golden_tests__t2_orthogonal_tree.snap
---
source: catena/src/scene/golden_tests.rs
expression: "render(&scene, (28, 5), Blitter::Braille)"
---
            [root]
              │
    ┌─────────┼─────────┐
    │         │         │
  [leaf]    [leaf]    [leaf]
