catena/src/scene/snapshots/catena__scene__golden_tests__t2_shared_trunk_ascii.snap
---
source: catena/src/scene/golden_tests.rs
expression: "render(&scene, (40, 9), blitter)"
---
[ada]                         [lovelace]
   ╲╲                         ╱╱╱
     ╲╲                    ╱╱╱
       ╲╲               ╱╱╱
         ╲┼───────────┼╳
        ╱╱              ╲╲╲
       ╱                   ╲╲╲╲
     ╱╱                        ╲╲╲
[babbage]                       [日本語]
