catena/src/scene/snapshots/catena__scene__golden_tests__t2_triangle_sextant.snap
---
source: catena/src/scene/golden_tests.rs
expression: "render(&scene, (34, 12), blitter)"
---

  ada🬋🬋🬢🬭🬭🬭🬭🬭🬭🬏
    🬈🬏        🬁🬂🬂🬂🬂🬂🬂🬂babbage
     🬉🬏                🬖🬂   🬂🬋🬏
      🬁🬓             🬖🬅       🬧
       🬁🬢          🬞🬅          ▌
        🬁🬢       🬞🬅🬀           ▌
          🬣    🬞🬋🬀            🬦🬀
           🬧 🬞🬖🬀              🬔
        lovelace             🬞🬄
                          日本語
